# grid

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yaml  conventions.yaml  coverage.yaml  operator-image.yaml  tests.yaml  unicode-safety.yaml
certs/: Cargo.toml
certs/src/: generate.rs  lib.rs  provider.rs
config/samples/: README.md  gridnetwork.yaml
crdt/: Cargo.toml
crdt/src/: gcounter.rs  grid_state.rs  lib.rs  lww.rs  orset.rs
deploy/: README.md  kustomization.yaml
deploy/crds/: gridnetwork.yaml  gridsite.yaml  inferenceprovider.yaml
deploy/examples/single-cluster-api-provider/: README.md  gridsite.yaml  inference-provider.yaml  kustomization.yaml
deploy/operator/: Containerfile  cluster-role-binding-crd.yaml  cluster-role-crd.yaml  cluster-role-resources.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  role-binding-default.yaml  service-account.yaml
docs/: README.md  conventions.md  demos-2026.md  development.md
docs/architecture/: auth.md  ci-kind-e2e.md  consumer-config.md  crds.md  external-ingress.md  operations.md  overview.md  routing.md  scoring.md
docs/developing/: conventions.md  type-design.md
docs/proposals/: consumer-config.md
environments/grid-glb-demo/: README.md  forge.yaml
environments/grid-glb-demo/configs/edge-us-east/: praxis.yaml
environments/grid-glb-demo/configs/overlay-sync/: sync.yaml
environments/grid-glb-demo/fixtures/: invalid-overlay.json
environments/grid-glb-demo/fixtures/requests/: shared-model.json
environments/grid-glb-demo/policies/: external-auth-demo.yaml  provider-access.yaml
environments/grid-glb-demo/resources/: edge-site.yaml  gridnetwork.yaml  provider-east-inference.yaml  provider-east-site.yaml  provider-gateway.yaml  provider-west-inference.yaml  provider-west-site.yaml  provider-workloads.yaml
environments/grid-glb-demo/resources/grid-operator/: kustomization.yaml
forge/: Cargo.toml
forge/examples/: minimal.yaml
forge/src/: cli.rs  context.rs  error.rs  lib.rs  main.rs  output.rs
forge/src/cluster/: kind.rs  mod.rs
forge/src/command/: config.rs  doctor.rs  down.rs  mod.rs  plan.rs  runner.rs  status.rs  up.rs
forge/src/config/: mod.rs  schema.rs  validate.rs
forge/src/networking/: mod.rs
forge/src/runtime/: mod.rs
forge/src/service/: health.rs  mod.rs
forge/src/stack/: engine.rs  mod.rs  steps.rs  template.rs
forge/src/state/: lock.rs  mod.rs
forge/tests/: integration.rs
grid-certs/: Cargo.toml
grid-certs/src/: generate.rs  lib.rs
grid-core/: Cargo.toml
grid-core/src/: backend.rs  error.rs  lib.rs  metrics.rs  scoring.rs
grid-crdt/: Cargo.toml
grid-crdt/src/: gcounter.rs  lww.rs  orset.rs
grid-operator/: Cargo.toml
grid-operator/src/: error.rs  lib.rs  main.rs
grid-operator/src/controller/: grid_network.rs
grid-operator/src/crd/: agent_to_agent_provider.rs  grid_site.rs  inference_provider.rs  mod.rs
grid-operator/src/resources/: mod.rs  overlay.rs  secret.rs  trust_bundle.rs
grid-swim/: Cargo.toml
grid-swim/src/: event.rs  identity.rs  lib.rs  runtime.rs
hack/: setup-kind.sh  teardown-kind.sh
mock-providers/: Cargo.toml  Containerfile  Dockerfile
mock-providers/src/: anthropic.rs  bedrock.rs  common.rs  lib.rs  main.rs  openai.rs  vertex.rs
operator/: Cargo.toml
operator/src/: error.rs  lib.rs  main.rs  metrics_parser.rs  metrics_scraper.rs  swim.rs  swim_runtime.rs
operator/src/controller/: grid_network.rs  grid_site.rs  inference_provider.rs  mod.rs
operator/src/crd/: agent_tool_provider.rs  auth.rs  grid_network.rs  grid_site.rs  inference_provider.rs  mod.rs
operator/src/resources/: consumer_config.rs  credentials.rs  mod.rs  overlay.rs  overlay_bridge.rs  provider_metrics.rs  routing_overlay.rs  secret.rs  trust_bundle.rs
scoring/: Cargo.toml
scoring/src/: error.rs  lib.rs  metrics.rs  scoring.rs  state.rs
scripts/: generate-deployment-crds.sh
swim/: Cargo.toml
swim/src/: crypto.rs  event.rs  identity.rs  lib.rs  node.rs  state_broadcast.rs
tests/env/: config.toml  operator-routing-multisite.toml  operator-routing-two-provider.toml  operator-routing.toml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/env/: certs.rs  config.rs  consumer.rs  gateway.rs  image_overrides.rs  images.rs  kind.rs  kubectl.rs  mod.rs  operator.rs  operator_overlay.rs  providers.rs  trust.rs  verify.rs
