[package]
name = "crdt"
description = "Delta CRDT types for AI Grid state propagation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
