[package]
name = "forge"
description = "Generic development-environment orchestrator for Kubernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "praxis-forge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["env"] }
fs2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[features]
test-support = []

[lints]
workspace = true
