[package]
name = "operator"
description = "AI Grid Kubernetes operator for multi-site inference orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
certs = { path = "../certs" }
futures = { workspace = true }
scoring = { path = "../scoring" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
# scoring is consumed via the operator overlay config; not yet referenced in stub code
ignored = ["scoring"]
