[package]
name = "operator"
description = "AI Grid Kubernetes operator for multi-site inference orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bytes = { workspace = true }
certs = { path = "../certs" }
swim = { path = "../swim" }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
scoring = { path = "../scoring" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
