[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
certs = { path = "../certs" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = "3.27.0"
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
